flex behavior in navbar

--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 .logo {
-  height: 23vh;
-  width: 23vh;
+  height: 7rem;
+  width: 7rem;
 }
 .wave {
   background: #606060;
