--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 @font-face {
   font-family: 'palmer';
-  src: url(/assets/PalmerLakePrint-Regular.otf);
+  src: url(assets/PalmerLakePrint-Regular.otf);
 }
 
 html {
@@ -76,7 +76,7 @@ body {
   font-family: 'palmer';
   font-weight: 500;
   padding: 0;
-  line-height: 42%;
+  line-height: 40%;
   margin-bottom: 1rem;
   letter-spacing: 0.5rem;
 }
@@ -101,7 +101,12 @@ p {
   font-size: 1rem;
   /* letter-spacing: 3%; */
   text-indent: 3%;
-  line-height: 1.6rem;
+  line-height: 1.5rem;
+}
+.textosmall {
+  font-size: 14px;
+  line-height: 1.2rem;
+  font-weight: 500;
 }
 /* Large devices (laptops/desktops, 992px and up) */
 /* @media only screen and (min-width: 992px) {
