--- a/style.css
+++ b/style.css
@@ -119,8 +119,11 @@ p {
   line-height: 1.2rem;
   font-weight: 500;
 }
-.card {
-  outline: 0px solid transparent !important;
+.card::before {
+  content: ;
+  display: block;
+  height: 20vh;
+  width: 20vw;
 }
 /* Large devices (laptops/desktops, 992px and up) */
 /* @media only screen and (min-width: 992px) {
