--- a/style.css
+++ b/style.css
@@ -21,14 +21,13 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 .logo {
-  height: 9rem;
-  width: 9rem;
+  height: 7.6rem;
+  width: 7.9rem;
   padding: 0%;
 }
 .wave {
   background: #6e6d68;
   color: white;
-  /* position: relative; */
 }
 
 .wave svg {
@@ -45,7 +44,7 @@ body {
 }
 .cajablanca {
   background-color: #ffff;
-  overflow: hidden;
+  margin-left: 20rem;
 }
 
 .white {
@@ -54,8 +53,8 @@ body {
   padding: 10%;
 }
 .icons img {
-  height: 9rem;
-  width: 9rem;
+  height: 8rem;
+  width: 8rem;
 }
 .marginadjust {
   margin: auto;
@@ -83,11 +82,11 @@ body {
   line-height: 14%;
 }
 .grande {
-  font-size: 12rem;
+  font-size: 11rem;
   font-family: 'palmer';
   font-weight: 500;
   padding: 0;
-  line-height: 40%;
+  line-height: 35%;
   margin-bottom: 1rem;
   letter-spacing: 0.5rem;
 }
@@ -119,12 +118,7 @@ p {
   line-height: 1.2rem;
   font-weight: 500;
 }
-.card::before {
-  content: ;
-  display: block;
-  height: 20vh;
-  width: 20vw;
-}
+
 /* Large devices (laptops/desktops, 992px and up) */
 /* @media only screen and (min-width: 992px) {
   .cajamarilla {
