--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ html {
 }
 body {
   width: 100%;
-  font-family: 'Poppins', sans-serif !important;
+  /* font-family: 'Poppins', sans-serif !important; */
+  box-sizing: border-box;
 }
 .logo {
   height: 7.2rem;
