--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ html {
 }
 body {
   width: 100%;
-  /* font-family: 'Poppins', sans-serif !important; */
   box-sizing: border-box;
+  font-size: 2rem;
 }
 .logo {
   height: 6.2rem;
