sin navbar fixed

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
   box-sizing: border-box;
   font-size: 2rem;
 }
+footer {
+  padding: 1.2rem;
+}
 .logo {
   height: 6.2rem;
   width: 6.9rem;
@@ -113,8 +116,9 @@ p {
   font-weight: 500;
 }
 .carrouselimg {
-  height: 90vh !important;
+  height: 95vh !important;
 }
+
 /*effects*/
 @-webkit-keyframes hvr-pulse-grow {
   to {
@@ -156,10 +160,8 @@ p {
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
 }
 .hvr-grow:hover,
 .hvr-grow:focus,
