--- a/style.css
+++ b/style.css
@@ -73,10 +73,10 @@ footer {
 }
 
 .cursiva {
-  font-size: 2.2rem;
-  font-weight: 400;
-  font-style: oblique;
-  font-family: 'poppins';
+  font-size: 2.8rem;
+  font-weight: 600;
+  font-style: italic;
+  font-family: 'caveat';
   line-height: 14%;
 }
 .grande {
