--- a/style.css
+++ b/style.css
@@ -115,6 +115,16 @@ p {
   line-height: 1.2rem;
   font-weight: 500;
 }
+.vertical {
+  height: 1.1rem;
+  border-left: 2px solid black;
+  left: 50%;
+  position: inherit;
+  margin-left: -3px;
+  margin-bottom: 0px;
+  padding-bottom: 1px;
+}
+
 .carrouselimg {
   height: 95vh !important;
 }
