--- a/style.css
+++ b/style.css
@@ -180,6 +180,43 @@ p {
   transform: scale(1.1);
 }
 
+/*nosotros effects*/
+#table {
+  display: table;
+  width: 100%;
+  height: 100%;
+  background-color: #fdc400;
+  display: flex;
+  font-family: 'Caveat';
+  font-weight: 600;
+}
+.titulo {
+  text-transform: uppercase;
+  letter-spacing: 1pt;
+  font-size: 45pt;
+}
+.parrafo {
+  text-align: center;
+  margin: 0;
+  text-transform: lowercase;
+  font-size: 30pt;
+  font-weight: 900;
+  width: 50%;
+  display: none;
+  letter-spacing: 1pt;
+  line-height: 2.5rem;
+  color: white;
+}
+
+#centeralign {
+  display: table-cell;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 6rem;
+  text-align: center;
+}
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 600px) {
   .imgmain {
