--- a/style.css
+++ b/style.css
@@ -125,10 +125,6 @@ p {
   padding-bottom: 1px;
 }
 
-.carrouselimg {
-  height: 95vh !important;
-}
-
 /*effects*/
 @-webkit-keyframes hvr-pulse-grow {
   to {
@@ -184,7 +180,6 @@ p {
 #table {
   display: table;
   width: 100%;
-  height: 100%;
   background-color: #fdc400;
   display: flex;
   font-family: 'Caveat';
@@ -193,19 +188,19 @@ p {
 .titulo {
   text-transform: uppercase;
   letter-spacing: 1pt;
-  font-size: 45pt;
+  font-size: 5rem;
 }
 .parrafo {
   text-align: center;
   margin: 0;
   text-transform: lowercase;
-  font-size: 30pt;
-  font-weight: 900;
-  width: 50%;
-  display: none;
+  font-size: 2rem;
+  font-weight: 600;
+  width: 100%;
   letter-spacing: 1pt;
   line-height: 2.5rem;
   color: white;
+  font-family: 'Caveat';
 }
 
 #centeralign {
