--- a/style.css
+++ b/style.css
@@ -180,41 +180,40 @@ p {
 }
 
 /*nosotros effects*/
-#table {
-  display: table;
-  width: 100%;
-  background-color: #fdc400;
-  display: flex;
-  font-family: 'Caveat';
-  font-weight: 600;
-}
+
 .titulo {
-  text-transform: uppercase;
+  font-family: 'caveat';
+  font-weight: 600;
   letter-spacing: 1pt;
-  font-size: 5rem;
+  font-size: 6rem;
+  color: #fffb00f8;
 }
 .parrafo {
   text-align: center;
   margin: 0;
   text-transform: lowercase;
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-weight: 600;
   width: 100%;
   letter-spacing: 1pt;
   line-height: 2.5rem;
-  color: white;
+  color: #ffff;
   font-family: 'Caveat';
 }
-
-#centeralign {
-  display: table-cell;
-  vertical-align: middle;
-  align-items: center;
+.cajanosotros {
+  background-image: url(' carrousel/carrouselbw.png');
+  background-size: cover;
+  height: 30%;
+  display: flex;
   justify-content: center;
-  margin: 0 auto;
-  margin-top: 6rem;
+  align-items: center;
   text-align: center;
+  text-decoration-color: #fdc400;
 }
+#alto {
+  height: 32%;
+}
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 600px) {
   .imgmain {
